# ShadingLanguageX

./: .gitignore  CHANGELOG.md  README.md  install.sh  python_version_test.py
mxslc/: README.md  main.py  pyproject.toml  requirements.txt  tools.py
mxslc/mxslc/: Argument.py  Attribute.py  CompileError.py  DataType.py  Function.py  Keyword.py  Parameter.py  SourceFile.py  StandardLibrary.py  Token.py  TokenReader.py  __init__.py  compile.py  compile_file.py  document.py  file_utils.py  mtlx.py  mx_utils.py  mx_wrapper.py  mxslc.py  node_utils.py  parse.py  post_process.py  pre_process.py  scan.py  state.py  token_types.py  utils.py
mxslc/mxslc/Decompiler/: DecompileError.py  decompile.py
mxslc/mxslc/Expressions/: BinaryExpression.py  ConstructorCall.py  Expression.py  FunctionCall.py  GroupingExpression.py  IdentifierExpression.py  IfExpression.py  IndexingExpression.py  LiteralExpression.py  NodeConstructor.py  NodeExpression.py  StandardLibraryCall.py  SwitchExpression.py  SwizzleExpression.py  TernaryRelationalExpression.py  UnaryExpression.py  VariableDeclarationExpression.py  __init__.py  expression_utils.py
mxslc/mxslc/Interactive/: InteractiveCompiler.py  InteractiveExpression.py  InteractiveNode.py  ShaderInterface.py  ValueExpression.py  __init__.py  globals.py  mx_interactive_types.py
mxslc/mxslc/Preprocess/: macros.py  (+3 more)
mxslc/tests/: compile_test.py  conftest.py  parse_test.py  pre_process_test.py  scan_test.py  test_compile_file_args.py  test_decompiler.py  test_main.py  test_main_function.py  test_mxslc.py  test_mxslc_compile_error.py  token_test.py
(+342 files in other folders)
