[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mxslc"
version = "0.5.2-beta"
requires-python = ">=3.12"
dependencies = [
    "MaterialX~=1.39.3",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.3.5",
]
[project.scripts]
mxslc = "mxslc.main:main"

[tool.setuptools]
packages = ["mxslc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
